Clarify "text-align" CSS helpers, fix clone button padding (#25763) (#25764)
Backport  #25763

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -194,6 +194,7 @@
 
 .repository #clone-panel #repo-clone-url {
   width: 320px;
+  border-radius: 0;
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -2662,7 +2663,7 @@
   height: 30px;
 }
 
-.repo-button-row .button.dropdown {
+.repo-button-row .button.dropdown:not(.icon) {
   padding-right: 22px !important; /* normal buttons have !important paddings, so we need to override it for dropdown (Add File) icons */
 }
 
